--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section id="about" class="bg-white pt-24 pb-32 px-6">
         <div class="container mx-auto max-w-4xl text-center">
             <!-- Your professional headshot -->
-            <img src="https://i.imgur.com/gY8v1Lq.png" alt="Laura Clarke" class="w-36 h-36 rounded-full mx-auto mb-6 border-4 border-white shadow-lg">
+            <img src="https://profile-picture.png" alt="Laura Clarke" class="w-36 h-36 rounded-full mx-auto mb-6 border-4 border-white shadow-lg">
             
             <h1 class="text-4xl md:text-5xl font-bold text-gray-900">
                 Laura Clarke
@@ -132,7 +132,7 @@
                         An in-depth analysis of the 2025 exam supervision process, demonstrating my expertise in high-stakes logistics, risk management, resource scheduling, and regulatory adherence.
                     </p>
                     <!-- NOTE: Upload your Case Study PDF and update this link -->
-                    <a href="Title_ Case Study_ High-Stakes Exam Administration & Data Integrity (1).pdf" target="_blank" 
+                    <a href="Title_ Case Study_ High-Stakes Exam Administration & Data Integrity.pdf" target="_blank" 
                        class="text-primary-green font-medium text-lg hover:underline">
                         View Case Study (PDF) &rarr;
                     </a>
@@ -149,7 +149,7 @@
                         A comprehensive dashboard used to manage a $150k DIY project budget. This tool tracks total funds, project spending by category (materials, labor), and reports the real-time net position.
                     </p>
                     <!-- NOTE: Upload your Dashboard PDF and update this link -->
-                    <a href="Laura's DIY_Projects - Dashboard.pdf" target="_blank" 
+                    <a href=DIY_Projects - Dashboard.pdf" target="_blank" 
                        class="text-primary-green font-medium text-lg hover:underline">
                         View Dashboard (PDF) &rarr;
                     </a>
@@ -233,4 +233,5 @@
     </script>
 
 </body>
+
 </html>
