--- a/index.html
+++ b/index.html
@@ -80,8 +80,12 @@
     <!-- ======================================= -->
     <section id="about" class="bg-white pt-24 pb-32 px-6">
         <div class="container mx-auto max-w-4xl text-center">
-            <!-- Your professional headshot -->
-            <img src="https://profile-picture.png" alt="Laura Clarke" class="w-36 h-36 rounded-full mx-auto mb-6 border-4 border-white shadow-lg">
+            <!-- 
+                BEFORE: 
+                <img src="https://i.imgur.com/gY8v1Lq.png" ... >
+            -->
+            <!-- AFTER: Link to your local profile picture -->
+            <img src="images/profile-picture.jpg" alt="Laura Clarke" class="w-36 h-36 rounded-full mx-auto mb-6 border-4 border-white shadow-lg object-cover">
             
             <h1 class="text-4xl md:text-5xl font-bold text-gray-900">
                 Laura Clarke
@@ -121,8 +125,12 @@
             <div class="portfolio-card grid grid-cols-1 md:grid-cols-2 gap-8 items-center overflow-hidden mb-16">
                 <!-- Image Column -->
                 <div class="overflow-hidden">
-                    <!-- NOTE: Screenshot your Case Study's title page and link it here -->
-                    <img src="https://placehold.co/600x450/e0e7ff/333333?text=Case+Study+Screenshot" alt="Exam Supervision Case Study" class="w-full h-auto object-cover">
+                    <!-- 
+                        BEFORE: 
+                        <img src="https://placehold.co/600x450/e0e7ff/333333?text=Case+Study+Screenshot" ... >
+                    -->
+                    <!-- AFTER: Link to your local image -->
+                    <img src="images/case-study-screenshot.jpg" alt="Exam Supervision Case Study" class="w-full h-auto object-cover">
                 </div>
                 <!-- Text Column -->
                 <div class="p-8 md:p-10">
@@ -132,7 +140,7 @@
                         An in-depth analysis of the 2025 exam supervision process, demonstrating my expertise in high-stakes logistics, risk management, resource scheduling, and regulatory adherence.
                     </p>
                     <!-- NOTE: Upload your Case Study PDF and update this link -->
-                    <a href="Title_ Case Study_ High-Stakes Exam Administration & Data Integrity.pdf" target="_blank" 
+                    <a href="Case-Study.pdf" target="_blank" 
                        class="text-primary-green font-medium text-lg hover:underline">
                         View Case Study (PDF) &rarr;
                     </a>
@@ -149,15 +157,19 @@
                         A comprehensive dashboard used to manage a $150k DIY project budget. This tool tracks total funds, project spending by category (materials, labor), and reports the real-time net position.
                     </p>
                     <!-- NOTE: Upload your Dashboard PDF and update this link -->
-                    <a href=DIY_Projects - Dashboard.pdf" target="_blank" 
+                    <a href="Project-Dashboard.pdf" target="_blank" 
                        class="text-primary-green font-medium text-lg hover:underline">
                         View Dashboard (PDF) &rarr;
                     </a>
                 </div>
                 <!-- Image Column -->
                 <div class="overflow-hidden md:order-1">
-                    <!-- NOTE: Screenshot your Dashboard and link it here -->
-                    <img src="https://placehold.co/600x450/dbead5/333333?text=Project+Dashboard+Screenshot" alt="DIY Project Budget Tracker" class="w-full h-auto object-cover">
+                    <!-- 
+                        BEFORE: 
+                        <img src="https://placehold.co/600x450/dbead5/333333?text=Project+Dashboard+Screenshot" ... >
+                    -->
+                    <!-- AFTER: Link to your local image -->
+                    <img src="images/dashboard-screenshot.jpg" alt="DIY Project Budget Tracker" class="w-full h-auto object-cover">
                 </div>
             </div>
 
@@ -165,8 +177,12 @@
             <div class="portfolio-card grid grid-cols-1 md:grid-cols-2 gap-8 items-center overflow-hidden">
                 <!-- Image Column -->
                 <div class="overflow-hidden">
-                    <!-- NOTE: Screenshot your blogs and link it here -->
-                    <img src="https://placehold.co/600x450/fffbe6/333333?text=Blog+Projects+Screenshot" alt="Digital Content Management" class="w-full h-auto object-cover">
+                    <!-- 
+                        BEFORE: 
+                        <img src="https://placehold.co/600x450/fffbe6/333333?text=Blog+Projects+Screenshot" ... >
+                    -->
+                    <!-- AFTER: Link to your local image -->
+                    <img src="images/blogs-screenshot.jpg" alt="Digital Content Management" class="w-full h-auto object-cover">
                 </div>
                 <!-- Text Column -->
                 <div class="p-8 md:p-10">
@@ -181,7 +197,7 @@
                         View HairSkinHaven (WordPress) &rarr;
                     </a>
                     <!-- NOTE: Update this link to your GitHub blog -->
-                    <a href="https://laaraklaak.github.io/learn-jamaican" target="_blank" class="ml-6 text-primary-green font-medium text-lg hover:underline">
+                    <a href="#" target="_blank" class="ml-6 text-primary-green font-medium text-lg hover:underline">
                         View Language Blog (GitHub) &rarr;
                     </a>
                 </div>
@@ -233,5 +249,4 @@
     </script>
 
 </body>
-
 </html>
