--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <img src="https://i.imgur.com/gY8v1Lq.png" ... >
             -->
             <!-- AFTER: Link to your local profile picture -->
-            <img src="images/profile-picture.jpg" alt="Laura Clarke" class="w-36 h-36 rounded-full mx-auto mb-6 border-4 border-white shadow-lg object-cover">
+            <img src="images/profile-picture.png" alt="Laura Clarke" class="w-36 h-36 rounded-full mx-auto mb-6 border-4 border-white shadow-lg object-cover">
             
             <h1 class="text-4xl md:text-5xl font-bold text-gray-900">
                 Laura Clarke
@@ -249,4 +249,5 @@
     </script>
 
 </body>
+
 </html>
