--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <img src="https://placehold.co/600x450/fffbe6/333333?text=Blog+Projects+Screenshot" ... >
                     -->
                     <!-- AFTER: Link to your local image -->
-                    <img src="images/blogs-screenshot.jpg" alt="Digital Content Management" class="w-full h-auto object-cover">
+                    <img src="images/blog1-screenshot.jpg" alt="Digital Content Management" class="w-full h-auto object-cover">
                 </div>
                 <!-- Text Column -->
                 <div class="p-8 md:p-10">
@@ -251,4 +251,5 @@
 </body>
 
 </html>
+
 
