--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <!-- CTA Buttons -->
             <div class="flex flex-col sm:flex-row justify-center gap-4 mt-10">
                 <!-- NOTE: Upload your CV to your GitHub and update this link -->
-                <a href="LAURA CLARKE-CV.pdf" target="_blank" 
+                <a href="PDF/LAURA CLARKE-CV.pdf" target="_blank" 
                    class="bg-primary-green hover:bg-primary-green-dark text-white px-8 py-3 rounded-lg font-medium text-lg transition-colors">
                     Download CV (PDF)
                 </a>
@@ -140,7 +140,7 @@
                         An in-depth analysis of the 2025 exam supervision process, demonstrating my expertise in high-stakes logistics, risk management, resource scheduling, and regulatory adherence.
                     </p>
                     <!-- NOTE: Upload your Case Study PDF and update this link -->
-                    <a href="Case-Study.pdf" target="_blank" 
+                    <a href="PDF/Case Study_High-Stakes Exam Administration & Data Integrity (1).pdf" target="_blank" 
                        class="text-primary-green font-medium text-lg hover:underline">
                         View Case Study (PDF) &rarr;
                     </a>
@@ -251,5 +251,6 @@
 </body>
 
 </html>
+
 
 
