--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <!-- CTA Buttons -->
             <div class="flex flex-col sm:flex-row justify-center gap-4 mt-10">
                 <!-- NOTE: Upload your CV to your GitHub and update this link -->
-                <a href="PDF/LAURA CLARKE-CV.pdf" target="_blank" 
+                <a href="PDF/Laura Clarke_CV.pdf" target="_blank" 
                    class="bg-primary-green hover:bg-primary-green-dark text-white px-8 py-3 rounded-lg font-medium text-lg transition-colors">
                     Download CV (PDF)
                 </a>
@@ -251,6 +251,7 @@
 </body>
 
 </html>
+
 
 
 
