--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         An in-depth analysis of the 2025 exam supervision process, demonstrating my expertise in high-stakes logistics, risk management, resource scheduling, and regulatory adherence.
                     </p>
                     <!-- NOTE: Upload your Case Study PDF and update this link -->
-                    <a href="Case Study_High-Stakes Exam Administration & Data Integrity (1).pdf" target="_blank" 
+                    <a href="PDF/Case Study_High-Stakes Exam Administration & Data Integrity (1).pdf" target="_blank" 
                        class="text-primary-green font-medium text-lg hover:underline">
                         View Case Study (PDF) &rarr;
                     </a>
@@ -251,6 +251,7 @@
 </body>
 
 </html>
+
 
 
 
