--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         A comprehensive dashboard used to manage a $150k DIY project budget. This tool tracks total funds, project spending by category (materials, labor), and reports the real-time net position.
                     </p>
                     <!-- NOTE: Upload your Dashboard PDF and update this link -->
-                    <a href="PDF/Laura's DIY_Project-Dashboard.pdf" target="_blank" 
+                    <a href="PDF/Laura's DIY_Projects-Dashboard.pdf" target="_blank" 
                        class="text-primary-green font-medium text-lg hover:underline">
                         View Dashboard (PDF) &rarr;
                     </a>
@@ -251,6 +251,7 @@
 </body>
 
 </html>
+
 
 
 
