--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <!-- Profile Picture -->
             <div class="md:w-2/5 flex justify-center">
                 <!-- Added a "glow" effect to the shadow for a premium look -->
-                <img src="images/profile-picture.jpg" alt="Laura Clarke" class="rounded-full w-72 h-72 md:w-96 md:h-96 object-cover border-8 border-white shadow-lg" style="box-shadow: 0 10px 25px -5px rgba(22, 163, 74, 0.1), 0 10px 10px -5px rgba(22, 163, 74, 0.04);">
+                <img src="images/profile-picture.png" alt="Laura Clarke" class="rounded-full w-72 h-72 md:w-96 md:h-96 object-cover border-8 border-white shadow-lg" style="box-shadow: 0 10px 25px -5px rgba(22, 163, 74, 0.1), 0 10px 10px -5px rgba(22, 163, 74, 0.04);">
             </div>
         </div>
     </section>
@@ -234,3 +234,4 @@
 
 </body>
 </html>
+
