--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <p class="text-gray-600 mb-8 text-lg">
                             This case study of my work with the OEC proves my ability to manage complex, high-stakes logistics, sensitive data, and large teams with 100% compliance.
                         </p>
-                        <a href="case-study-logistics.pdf" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center text-lg">
+                        <a href="PDF/case-study-logistics.pdf" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center text-lg">
                             View Case Study &nbsp; <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
@@ -158,7 +158,7 @@
                         <p class="text-gray-600 mb-8 text-lg">
                             A breakdown of how I managed a 5-month medical crisis, using meticulous data analysis and financial control to navigate the challenge and emerge with zero debt.
                         </p>
-                        <a href="case-study-crisis.pdf" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center text-lg">
+                        <a href="PDF/case-study-crisis.pdf" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center text-lg">
                             View Case Study &nbsp; <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
@@ -234,4 +234,5 @@
 
 </body>
 </html>
+
 
