--- a/index.html
+++ b/index.html
@@ -166,22 +166,40 @@
             </div>
 
             <!-- Portfolio Item 3: Modern Initiative (Digital) -->
+         <!-- Portfolio Item 3: Modern Initiative (Digital) -->
             <div class="portfolio-item scroll-reveal">
                 <div class="portfolio-layout flex flex-col md:flex-row items-center bg-white rounded-xl shadow-lg overflow-hidden transition-all duration-300 hover:shadow-2xl hover:scale-[1.02]">
                     <!-- Image -->
-                    <div class="md:w-1/2">
+                    <div class="md:w/1/2">
+                        <!-- Use your composite 'blogs-screenshot.jpg' here -->
                         <img src="images/blogs-screenshot.jpg" alt="Digital Content Management Projects" class="object-cover w-full h-64 md:h-96">
                     </div>
                     <!-- Text -->
                     <div class="md:w-1/2 p-10 md:p-16">
                         <h3 class="text-sm font-bold uppercase text-gray-500 mb-2 tracking-wider">Pillar 3: Modern Initiative</h3>
-                        <h2 class="text-3xl font-bold text-gray-900 mb-5">Digital Transformation & E-Learning</h2>
+                        <h2 class="text-3xl font-bold text-gray-900 mb-5">Digital Content & E-Learning</h2>
                         <p class="text-gray-600 mb-8 text-lg">
-                            This case study shows how I taught myself a new tech stack (GitHub, Google Suite) and transformed from an online student into a digital curriculum builder.
+                           This case study shows my self-taught digital transformation. These projects are the live results: a GitHub e-learning site and a WordPress research blog.
                         </p>
-                        <a href="https://lauraclarke-freelancer.github.io/JALC/" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center text-lg">
-                            View Language Blog &nbsp; <i class="fas fa-external-link-alt"></i>
-                        </a>
+                        
+                        <!-- This is the container for all three links -->
+                        <div class="flex flex-col gap-4">
+                            <!-- Link 1: The Case Study PDF (Main Button) -->
+                            <a href="case-study-digital.pdf" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center justify-center text-lg">
+                                Read Case Study &nbsp; <i class="fas fa-arrow-right"></i>
+                            </a>
+                            
+                            <!-- Links 2 & 3: The Live Blogs (Secondary Buttons) -->
+                            <div class="flex flex-wrap gap-4">
+                                <a href="https://lauraclarke-freelancer.github.io/JALC/" target="_blank" class="brand-outline-btn-sm">
+                                    Language Blog (GitHub) &nbsp; <i class="fas fa-external-link-alt"></i>
+                                </a>
+                                 <a href="https://hairskinhaven.wordpress.com" target="_blank" class="brand-outline-btn-sm">
+                                    Wellness Blog (WP) &nbsp; <i class="fas fa-external-link-alt"></i>
+                                </a>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -234,5 +252,6 @@
 
 </body>
 </html>
+
 
 
