--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <!-- This is the container for all three links -->
                         <div class="flex flex-col gap-4">
                             <!-- Link 1: The Case Study PDF (Main Button) -->
-                            <a href="case-study-digital.pdf" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center justify-center text-lg">
+                            <a href="PDF/case-study-digital.pdf" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center justify-center text-lg">
                                 Read Case Study &nbsp; <i class="fas fa-arrow-right"></i>
                             </a>
                             
@@ -252,6 +252,7 @@
 
 </body>
 </html>
+
 
 
 
