--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             
                             <!-- Links 2 & 3: The Live Blogs (Secondary Buttons) -->
                             <div class="flex flex-wrap gap-4">
-                                <a href="https://lauraclarke-freelancer.github.io/JALC/" target="_blank" class="brand-outline-btn-sm">
+                                <a href="https://laaraklaak.github.io/learn-jamaican/JALC/" target="_blank" class="brand-outline-btn-sm">
                                     Language Blog (GitHub) &nbsp; <i class="fas fa-external-link-alt"></i>
                                 </a>
                                  <a href="https://hairskinhaven.wordpress.com" target="_blank" class="brand-outline-btn-sm">
@@ -252,6 +252,7 @@
 
 </body>
 </html>
+
 
 
 
