--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <a href="#portfolio" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-8 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
                         View My Work
                     </a>
-                    <a href="laura-clarke-cv-public.pdf" target="_blank" class="brand-outline-btn font-bold py-3 px-8 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
+                    <a href="PDF/laura_clarke_cv_public.pdf" target="_blank" class="brand-outline-btn font-bold py-3 px-8 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
                         Download CV (PDF)
                     </a>
                 </div>
@@ -252,6 +252,7 @@
 
 </body>
 </html>
+
 
 
 
