--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <!-- Image -->
                     <div class="md:w/1/2">
                         <!-- Use your composite 'blogs-screenshot.jpg' here -->
-                        <img src="images/blogs-screenshot.jpg" alt="Digital Content Management Projects" class="object-cover w-full h-64 md:h-96">
+                        <img src="images/digital-products-composite.png" alt="Digital Content Management Projects" class="object-cover w-full h-64 md:h-96">
                     </div>
                     <!-- Text -->
                     <div class="md:w-1/2 p-10 md:p-16">
@@ -252,6 +252,7 @@
 
 </body>
 </html>
+
 
 
 
