--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laura Clarke - Remote Operations & Administrative Specialist</title>
+    <title>Laura Clarke - Freelance Operations Specialist</title>
     <!-- 1. Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- 2. Font Awesome Icons -->
@@ -90,9 +90,9 @@
             <!-- Text Content -->
             <div class="md:w-3/5 text-center md:text-left mb-12 md:mb-0">
                 <h1 class="text-5xl md:text-6xl font-extrabold text-gray-900 mb-4 tracking-tight">Laura Clarke</h1>
-                <h2 class="text-2xl md:text-3xl font-light text-gray-700 mb-8">Remote Operations & Administrative Specialist</h2>
+                <h2 class="text-2xl md:text-3xl font-light text-gray-700 mb-8">Freelance Operations Specialist | Logistics, Compliance & Admin</h2>
                 <p class="text-lg text-gray-600 mb-10 max-w-xl">
-                    Leveraging 15+ years of experience in high-compliance environments (OEC, NCB) to provide expert remote operations, financial admin, and project coordination.
+                   I am available for project-based contracts, bringing 15+ years of high-compliance experience (OEC, NCB) to your specific project needs in logistics, compliance, and financial administration.
                 </p>
                 <div class="flex justify-center md:justify-start space-x-4">
                     <a href="#portfolio" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-8 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
@@ -212,7 +212,7 @@
         <div class="container mx-auto px-6 text-center">
             <h2 class="text-4xl font-bold mb-4">Let's Connect</h2>
             <p class="text-xl text-gray-300 mb-10 max-w-xl mx-auto">
-                I am actively seeking remote opportunities in operations, administration, and project coordination. I'm ready to bring my skills to your team.
+                I am available for project-based contracts in operations, administration, and project coordination.
             </I>
             <div class="flex flex-col md:flex-row justify-center space-y-4 md:space-y-0 md:space-x-6">
                 <!-- Refined "Glass" Button Style -->
@@ -252,6 +252,7 @@
 
 </body>
 </html>
+
 
 
 
