--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <!-- Profile Picture -->
             <div class="md:w-2/5 flex justify-center">
                 <!-- Placeholder for image -->
-                <img src="profile-picture.png" alt="Laura Clarke" class="rounded-full w-72 h-72 md:w-96 md:h-96 object-cover border-8 border-white shadow-lg" style="box-shadow: 0 10px 25px -5px rgba(22, 163, 74, 0.1), 0 10px 10px -5px rgba(22, 163, 74, 0.04);" onerror="this.onerror=null;this.src='https://placehold.co/400x400/16A34A/FFFFFF?text=Laura+Clarke'">
+                <img src="profile-picture.png" alt="Laura Clarke" class="rounded-full w-72 h-72 md:w-96 md:h-96 object-cover border-8 border-white shadow-lg" style="box-shadow: 0 10px 25px -5px rgba(22, 163, 74, 0.1), 0 10px 10px -5px rgba(22, 163, 74, 0.04);" onerror="this.onerror=null;this.src='profile-picture.png'">
             </div>
         </div>
     </section>
