--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         View My Work
                     </a>
                     <!-- NOTE: Portfolio links must be accurate -->
-                    <a href="laura_clarke_cv_public.pdf" target="_blank" class="brand-outline-btn font-bold py-3 px-8 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
+                    <a href="laura-clarke-cv-public.pdf" target="_blank" class="brand-outline-btn font-bold py-3 px-8 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
                         Download CV (PDF)
                     </a>
                 </div>
@@ -123,7 +123,7 @@
             <!-- Profile Picture -->
             <div class="md:w-2/5 flex justify-center">
                 <!-- Placeholder for image -->
-                <img src="profile-picture.png" alt="Laura Clarke" class="rounded-full w-72 h-72 md:w-96 md:h-96 object-cover border-8 border-white shadow-lg" style="box-shadow: 0 10px 25px -5px rgba(22, 163, 74, 0.1), 0 10px 10px -5px rgba(22, 163, 74, 0.04);" onerror="this.onerror=null;this.src='profile-picture.png'">
+                <img src="https://placehold.co/400x400/16A34A/FFFFFF?text=Laura+Clarke" alt="Laura Clarke" class="rounded-full w-72 h-72 md:w-96 md:h-96 object-cover border-8 border-white shadow-lg" style="box-shadow: 0 10px 25px -5px rgba(22, 163, 74, 0.1), 0 10px 10px -5px rgba(22, 163, 74, 0.04);" onerror="this.onerror=null;this.src='https://placehold.co/400x400/16A34A/FFFFFF?text=Laura+Clarke'">
             </div>
         </div>
     </section>
@@ -176,7 +176,7 @@
                     <!-- Image -->
                     <div class="md:w-1/2">
                         <!-- Placeholder image URL -->
-                        <img src="exam-logistics-screenshot.jpg" alt="Exam Administration Case Study" class="object-cover w-full h-64 md:h-96" onerror="this.onerror=null;this.src='https://placehold.co/800x600/16A34A/FFFFFF?text=High-Stakes+Logistics'">
+                        <img src="https://placehold.co/800x600/16A34A/FFFFFF?text=High-Stakes+Logistics" alt="Exam Administration Case Study" class="object-cover w-full h-64 md:h-96" onerror="this.onerror=null;this.src='https://placehold.co/800x600/16A34A/FFFFFF?text=High-Stakes+Logistics'">
                     </div>
                     <!-- Text -->
                     <div class="md:w-1/2 p-10 md:p-16">
@@ -198,7 +198,7 @@
                     <!-- Image -->
                     <div class="md:w-1/2">
                         <!-- Placeholder image URL -->
-                        <img src="case-study-crisis.png" alt="Crisis Project Management" class="object-cover w-full h-64 md:h-96" onerror="this.onerror=null;this.src='https://placehold.co/800x600/2F4F4F/FFFFFF?text=Crisis+Management+&amp;+Finance'">
+                        <img src="https://placehold.co/800x600/2F4F4F/FFFFFF?text=Crisis+Management+&amp;+Finance" alt="Crisis Project Management" class="object-cover w-full h-64 md:h-96" onerror="this.onerror=null;this.src='https://placehold.co/800x600/2F4F4F/FFFFFF?text=Crisis+Management+&amp;+Finance'">
                     </div>
                     <!-- Text -->
                     <div class="md:w-1/2 p-10 md:p-16">
@@ -220,7 +220,7 @@
                     <!-- Image -->
                     <div class="md:w-1/2">
                         <!-- Placeholder image URL -->
-                        <img src="digital-products-composite.png" alt="Digital Content Management Projects" class="object-cover w-full h-64 md:h-96" onerror="this.onerror=null;this.src='https://placehold.co/800x600/A8A29E/FFFFFF?text=Digital+E-Learning+and+Tech+Training'">
+                        <img src="https://placehold.co/800x600/A8A29E/FFFFFF?text=Digital+E-Learning+and+Tech+Training" alt="Digital Content Management Projects" class="object-cover w-full h-64 md:h-96" onerror="this.onerror=null;this.src='https://placehold.co/800x600/A8A29E/FFFFFF?text=Digital+E-Learning+and+Tech+Training'">
                     </div>
                     <!-- Text -->
                     <div class="md:w-1/2 p-10 md:p-16">
@@ -238,7 +238,7 @@
                             
                             <!-- Links 2 & 3: The Live Blogs (Secondary Buttons) -->
                             <div class="flex flex-wrap gap-4">
-                                <a href="https://laaraklaak.github.io/learn-jamaican" target="_blank" class="brand-outline-btn-sm">
+                                <a href="https://lauraclarke-freelancer.github.io/JALC/" target="_blank" class="brand-outline-btn-sm">
                                     Language Blog (GitHub) &nbsp; <i class="fas fa-external-link-alt"></i>
                                 </a>
                                  <a href="https://hairskinhaven.wordpress.com" target="_blank" class="brand-outline-btn-sm">
