--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         View My Work
                     </a>
                     <!-- NOTE: Portfolio links must be accurate -->
-                    <a href="laura-clarke-cv-public.pdf" target="_blank" class="brand-outline-btn font-bold py-3 px-8 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
+                    <a href="laura_clarke_cv_public.pdf" target="_blank" class="brand-outline-btn font-bold py-3 px-8 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
                         Download CV (PDF)
                     </a>
                 </div>
@@ -123,7 +123,7 @@
             <!-- Profile Picture -->
             <div class="md:w-2/5 flex justify-center">
                 <!-- Placeholder for image -->
-                <img src="https://placehold.co/400x400/16A34A/FFFFFF?text=Laura+Clarke" alt="Laura Clarke" class="rounded-full w-72 h-72 md:w-96 md:h-96 object-cover border-8 border-white shadow-lg" style="box-shadow: 0 10px 25px -5px rgba(22, 163, 74, 0.1), 0 10px 10px -5px rgba(22, 163, 74, 0.04);" onerror="this.onerror=null;this.src='https://placehold.co/400x400/16A34A/FFFFFF?text=Laura+Clarke'">
+                <img src="profile-picture.png" alt="Laura Clarke" class="rounded-full w-72 h-72 md:w-96 md:h-96 object-cover border-8 border-white shadow-lg" style="box-shadow: 0 10px 25px -5px rgba(22, 163, 74, 0.1), 0 10px 10px -5px rgba(22, 163, 74, 0.04);" onerror="this.onerror=null;this.src='profile-picture.png'">
             </div>
         </div>
     </section>
@@ -298,3 +298,4 @@
 
 </body>
 </html>
+
