--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <!-- Image -->
                     <div class="md:w-1/2">
                         <!-- Placeholder image URL -->
-                        <img src="https://placehold.co/800x600/16A34A/FFFFFF?text=High-Stakes+Logistics" alt="Exam Administration Case Study" class="object-cover w-full h-64 md:h-96" onerror="this.onerror=null;this.src='https://placehold.co/800x600/16A34A/FFFFFF?text=High-Stakes+Logistics'">
+                        <img src="exam-logistics-screenshot.jpg" alt="Exam Administration Case Study" class="object-cover w-full h-64 md:h-96" onerror="this.onerror=null;this.src='https://placehold.co/800x600/16A34A/FFFFFF?text=High-Stakes+Logistics'">
                     </div>
                     <!-- Text -->
                     <div class="md:w-1/2 p-10 md:p-16">
@@ -198,7 +198,7 @@
                     <!-- Image -->
                     <div class="md:w-1/2">
                         <!-- Placeholder image URL -->
-                        <img src="https://placehold.co/800x600/2F4F4F/FFFFFF?text=Crisis+Management+&amp;+Finance" alt="Crisis Project Management" class="object-cover w-full h-64 md:h-96" onerror="this.onerror=null;this.src='https://placehold.co/800x600/2F4F4F/FFFFFF?text=Crisis+Management+&amp;+Finance'">
+                        <img src="case-study-crisis.png" class="object-cover w-full h-64 md:h-96" onerror="this.onerror=null;this.src='case-study-crisis.png'">
                     </div>
                     <!-- Text -->
                     <div class="md:w-1/2 p-10 md:p-16">
@@ -298,4 +298,5 @@
 
 </body>
 </html>
+
 
