--- a/index.html
+++ b/index.html
@@ -114,16 +114,15 @@
                     <a href="#portfolio" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-8 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
                         View My Work
                     </a>
-                    <!-- NOTE: Portfolio links must be accurate -->
-                    <a href="laura_clarke_cv_public.pdf" target="_blank" class="brand-outline-btn font-bold py-3 px-8 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
+                    <!-- Portfolio links must be accurate -->
+                    <a href="laura-clarke-cv-public.pdf" target="_blank" class="brand-outline-btn font-bold py-3 px-8 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
                         Download CV (PDF)
                     </a>
                 </div>
             </div>
-            <!-- Profile Picture -->
+            <!-- Profile Picture - PATH FOR YOUR IMAGE -->
             <div class="md:w-2/5 flex justify-center">
-                <!-- Placeholder for image -->
-                <img src="profile-picture.png" alt="Laura Clarke" class="rounded-full w-72 h-72 md:w-96 md:h-96 object-cover border-8 border-white shadow-lg" style="box-shadow: 0 10px 25px -5px rgba(22, 163, 74, 0.1), 0 10px 10px -5px rgba(22, 163, 74, 0.04);" onerror="this.onerror=null;this.src='profile-picture.png'">
+                <img src="images/profile_photo.jpg" alt="Laura Clarke" class="rounded-full w-72 h-72 md:w-96 md:h-96 object-cover border-8 border-white shadow-lg" style="box-shadow: 0 10px 25px -5px rgba(22, 163, 74, 0.1), 0 10px 10px -5px rgba(22, 163, 74, 0.04);">
             </div>
         </div>
     </section>
@@ -173,10 +172,9 @@
             <!-- Portfolio Item 1: Professional Competence (OEC) -->
             <div class="portfolio-item scroll-reveal mb-24">
                 <div class="portfolio-layout flex flex-col md:flex-row items-center bg-white rounded-xl shadow-lg overflow-hidden transition-all duration-300 hover:shadow-2xl hover:scale-[1.02]">
-                    <!-- Image -->
+                    <!-- Image - PATH FOR YOUR IMAGE -->
                     <div class="md:w-1/2">
-                        <!-- Placeholder image URL -->
-                        <img src="exam-logistics-screenshot.jpg" alt="Exam Administration Case Study" class="object-cover w-full h-64 md:h-96" onerror="this.onerror=null;this.src='https://placehold.co/800x600/16A34A/FFFFFF?text=High-Stakes+Logistics'">
+                        <img src="images/logistics_case_study.jpg" alt="Exam Administration Case Study" class="object-cover w-full h-64 md:h-96">
                     </div>
                     <!-- Text -->
                     <div class="md:w-1/2 p-10 md:p-16">
@@ -185,6 +183,7 @@
                         <p class="text-gray-600 mb-8 text-lg">
                             This case study of my work with the OEC proves my ability to manage complex, high-stakes logistics, sensitive data, and large teams with 100% compliance.
                         </p>
+                        <!-- PDF FILE NAME -->
                         <a href="case-study-logistics.pdf" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center text-lg">
                             View Case Study &nbsp; <i class="fas fa-arrow-right"></i>
                         </a>
@@ -195,10 +194,9 @@
             <!-- Portfolio Item 2: Character & Resilience (Crisis) -->
             <div class="portfolio-item scroll-reveal mb-24">
                 <div class="portfolio-layout flex flex-col md:flex-row items-center bg-white rounded-xl shadow-lg overflow-hidden transition-all duration-300 hover:shadow-2xl hover:scale-[1.02]">
-                    <!-- Image -->
+                    <!-- Image - PATH FOR YOUR IMAGE -->
                     <div class="md:w-1/2">
-                        <!-- Placeholder image URL -->
-                        <img src="case-study-crisis.png" class="object-cover w-full h-64 md:h-96" onerror="this.onerror=null;this.src='case-study-crisis.png'">
+                        <img src="images/crisis_case_study.jpg" alt="Crisis Project Management" class="object-cover w-full h-64 md:h-96">
                     </div>
                     <!-- Text -->
                     <div class="md:w-1/2 p-10 md:p-16">
@@ -207,6 +205,7 @@
                         <p class="text-gray-600 mb-8 text-lg">
                             A breakdown of how I managed a 5-month medical crisis, using meticulous data analysis and financial control to navigate the challenge and emerge with zero debt.
                         </p>
+                        <!-- PDF FILE NAME -->
                         <a href="case-study-crisis.pdf" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center text-lg">
                             View Case Study &nbsp; <i class="fas fa-arrow-right"></i>
                         </a>
@@ -217,10 +216,9 @@
             <!-- Portfolio Item 3: Modern Initiative (Digital) -->
             <div class="portfolio-item scroll-reveal">
                 <div class="portfolio-layout flex flex-col md:flex-row items-center bg-white rounded-xl shadow-lg overflow-hidden transition-all duration-300 hover:shadow-2xl hover:scale-[1.02]">
-                    <!-- Image -->
+                    <!-- Image - PATH FOR YOUR IMAGE -->
                     <div class="md:w-1/2">
-                        <!-- Placeholder image URL -->
-                        <img src="https://placehold.co/800x600/A8A29E/FFFFFF?text=Digital+E-Learning+and+Tech+Training" alt="Digital Content Management Projects" class="object-cover w-full h-64 md:h-96" onerror="this.onerror=null;this.src='https://placehold.co/800x600/A8A29E/FFFFFF?text=Digital+E-Learning+and+Tech+Training'">
+                        <img src="images/digital_case_study.jpg" alt="Digital Content Management Projects" class="object-cover w-full h-64 md:h-96">
                     </div>
                     <!-- Text -->
                     <div class="md:w-1/2 p-10 md:p-16">
@@ -298,5 +296,3 @@
 
 </body>
 </html>
-
-
