--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         View My Work
                     </a>
                     <!-- Portfolio links must be accurate -->
-                    <a href="laura-clarke-cv-public.pdf" target="_blank" class="brand-outline-btn font-bold py-3 px-8 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
+                    <a href="laura_clarke_cv_public.pdf" target="_blank" class="brand-outline-btn font-bold py-3 px-8 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
                         Download CV (PDF)
                     </a>
                 </div>
@@ -296,3 +296,4 @@
 
 </body>
 </html>
+
