--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <div class="portfolio-layout flex flex-col md:flex-row items-center bg-white rounded-xl shadow-lg overflow-hidden transition-all duration-300 hover:shadow-2xl hover:scale-[1.02]">
                     <!-- Image - PATH FOR YOUR IMAGE -->
                     <div class="md:w-1/2">
-                        <img src="images/logistics_case_study.jpg" alt="Exam Administration Case Study" class="object-cover w-full h-64 md:h-96">
+                        <img src="images/exam-logistics-screenshot.jpg" alt="Exam Administration Case Study" class="object-cover w-full h-64 md:h-96">
                     </div>
                     <!-- Text -->
                     <div class="md:w-1/2 p-10 md:p-16">
@@ -184,7 +184,7 @@
                             This case study of my work with the OEC proves my ability to manage complex, high-stakes logistics, sensitive data, and large teams with 100% compliance.
                         </p>
                         <!-- PDF FILE NAME -->
-                        <a href="case-study-logistics.pdf" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center text-lg">
+                        <a href="PDF/case-study-logistics.pdf" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center text-lg">
                             View Case Study &nbsp; <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
@@ -196,7 +196,7 @@
                 <div class="portfolio-layout flex flex-col md:flex-row items-center bg-white rounded-xl shadow-lg overflow-hidden transition-all duration-300 hover:shadow-2xl hover:scale-[1.02]">
                     <!-- Image - PATH FOR YOUR IMAGE -->
                     <div class="md:w-1/2">
-                        <img src="images/crisis_case_study.jpg" alt="Crisis Project Management" class="object-cover w-full h-64 md:h-96">
+                        <img src="images/case-study-crisis.png" alt="Crisis Project Management" class="object-cover w-full h-64 md:h-96">
                     </div>
                     <!-- Text -->
                     <div class="md:w-1/2 p-10 md:p-16">
@@ -206,7 +206,7 @@
                             A breakdown of how I managed a 5-month medical crisis, using meticulous data analysis and financial control to navigate the challenge and emerge with zero debt.
                         </p>
                         <!-- PDF FILE NAME -->
-                        <a href="case-study-crisis.pdf" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center text-lg">
+                        <a href="PDF/case-study-crisis.pdf" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center text-lg">
                             View Case Study &nbsp; <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
@@ -218,7 +218,7 @@
                 <div class="portfolio-layout flex flex-col md:flex-row items-center bg-white rounded-xl shadow-lg overflow-hidden transition-all duration-300 hover:shadow-2xl hover:scale-[1.02]">
                     <!-- Image - PATH FOR YOUR IMAGE -->
                     <div class="md:w-1/2">
-                        <img src="images/digital_case_study.jpg" alt="Digital Content Management Projects" class="object-cover w-full h-64 md:h-96">
+                        <img src="images/digital-products-composite.png" alt="Digital Content Management Projects" class="object-cover w-full h-64 md:h-96">
                     </div>
                     <!-- Text -->
                     <div class="md:w-1/2 p-10 md:p-16">
@@ -230,13 +230,13 @@
                         <!-- UPDATED: Three links now -->
                         <div class="flex flex-col gap-4">
                             <!-- Link 1: The Case Study PDF (Main Button) -->
-                            <a href="case-study-digital.pdf" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center justify-center text-lg">
+                            <a href="PDF/case-study-digital.pdf" target="_blank" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-6 rounded-lg transition duration-300 inline-flex items-center justify-center text-lg">
                                 Read Case Study &nbsp; <i class="fas fa-arrow-right"></i>
                             </a>
                             
                             <!-- Links 2 & 3: The Live Blogs (Secondary Buttons) -->
                             <div class="flex flex-wrap gap-4">
-                                <a href="https://lauraclarke-freelancer.github.io/JALC/" target="_blank" class="brand-outline-btn-sm">
+                                <a href="https://laaraklaak.github.io/learn-jamaican" target="_blank" class="brand-outline-btn-sm">
                                     Language Blog (GitHub) &nbsp; <i class="fas fa-external-link-alt"></i>
                                 </a>
                                  <a href="https://hairskinhaven.wordpress.com" target="_blank" class="brand-outline-btn-sm">
@@ -296,5 +296,6 @@
 
 </body>
 </html>
+
 
 
