--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
             <!-- Profile Picture - PATH FOR YOUR IMAGE -->
             <div class="md:w-2/5 flex justify-center">
-                <img src="images/profile_photo.png" alt="Laura Clarke" class="rounded-full w-72 h-72 md:w-96 md:h-96 object-cover border-8 border-white shadow-lg" style="box-shadow: 0 10px 25px -5px rgba(22, 163, 74, 0.1), 0 10px 10px -5px rgba(22, 163, 74, 0.04);">
+                <img src="images/profile-picture.png" alt="Laura Clarke" class="rounded-full w-72 h-72 md:w-96 md:h-96 object-cover border-8 border-white shadow-lg" style="box-shadow: 0 10px 25px -5px rgba(22, 163, 74, 0.1), 0 10px 10px -5px rgba(22, 163, 74, 0.04);">
             </div>
         </div>
     </section>
@@ -296,6 +296,7 @@
 
 </body>
 </html>
+
 
 
 
