--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <h2 class="text-2xl md:text-3xl font-light text-gray-700 mb-8">DOCU-HUB OPERATIONS SERVICES | Compliance & Systems Expert</h2>
                 <!-- Simplified Tagline for One-on-One Solutions -->
                 <p class="text-lg text-gray-600 mb-10 max-w-xl">
-                    I offer dedicated, project-based administrative solutions. I bring 15+ years of high-compliance experience to organize your records, manage complex documents, and ensure everything is audit-ready.
+                    I am available for project-based contracts—from single form submissions to comprehensive records setup—bringing 15+ years of high-compliance experience (NCB, OEC) to your specific challenge.
                 </p>
                 <div class="flex justify-center md:justify-start space-x-4">
                     <a href="#services" class="brand-green-bg brand-green-bg-hover text-white font-bold py-3 px-8 rounded-lg shadow-lg transform hover:scale-105 transition duration-300">
@@ -256,3 +256,4 @@
 
 </body>
 </html>
+
