--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                  <!-- Placeholder 1 -->
                  <div class="review-card p-6 rounded-lg">
                      <p class="text-4xl mb-4 text-green-500"><i class="fas fa-quote-left"></i></p>
-                     <p class="text-gray-700 italic mb-4">"Laura helped me secure my business registration quickly and accurately. The attention to detail was exceptional."</p>
-                     <p class="font-bold text-gray-800">- Jane D., Small Business Owner</p>
+                     <p class="text-gray-700 italic mb-4">"Thanks for simplifying the passport application process, it's my first one and I didn't know where to start."</p>
+                     <p class="font-bold text-gray-800">- Danielle</p>
                  </div>
                  <!-- Placeholder 2 -->
                 <div class="review-card p-6 rounded-lg">
@@ -256,4 +256,5 @@
 
 </body>
 </html>
+
 
